--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -116,7 +116,7 @@
         .culture p,
         .ancient ol,
         .festive-text,
-        .landmark-text {
+        .landmark-text,.states table {
             font-family: 'Times New Roman', Times, serif;
             font-size: 20px;
         }
@@ -133,7 +133,7 @@
         #intro,
         #hist,
         #culture,
-        #landmark,
+        #landmark, #states,
         #festive {
             font-size: 40px;
             font-family: Arial;
@@ -171,7 +171,7 @@
                     <li><a href="#culture">Cultural Diversity</a></li>
                     <li><a href="#landmark">Landmarks of India</a></li>
                     <li><a href="#festive">Festivals OF India</a></li>
-                    <li>States, Capitals & UT's</li>
+                    <li><a href="#states">States, Capitals & UT's</a></li>
                     <li>National Symbols</li>
                     <li>Economy</li>
                     <li><a href="https://en.wikipedia.org/wiki/India#"><cite>Source : Wikipedia</cite></a></li>
@@ -559,7 +559,8 @@
                 </div>
             </div>
             <div class="states">
-                <table border="1">
+                <p id="states">States, Capitals and Union Territories</p>
+                <table border="1" cellpadding="10px">
                   <thead>
                     <tr>
                       <th>State/Union Territory</th>
