--- a/wap11h.html
+++ b/wap11h.html
@@ -16,5 +16,7 @@
 <span class='icon'><i class='fas fa-star'></i></span> Star Icon<br/> 
 <span class='icon'><i class='fas fa-heart'></i></span> Heart Icon<br/> 
 <span class='icon'><i class='fas fa-check'></i></span> Checkmark Icon<br/> 
- </div><script src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js'></script></body></html>
+ </div><script src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js'></script>
+</body>
+</html>
 
