--- a/wap5.html
+++ b/wap5.html
@@ -16,8 +16,8 @@
 <body bgcolor="#E6E6E6">
     <h1 align="center">INDIA - The Unique Charms of India's States</h1>
     <center>
-        <caption align="bottom">MAP OF INDIA - HOTSPOTS ON jammu-kashmir, punjab, haryana, uttrakhand, himachal pradesh
-        </caption><img src="india.jpg" alt="" width="" usemap="#name">
+        MAP OF INDIA - HOTSPOTS ON jammu-kashmir, punjab, haryana, uttrakhand, himachal pradesh <br> <br>
+    <img src="india.jpg" alt="" width="" usemap="#name">
     </center>
     <map name="name">
         <area shape="poly" coords="218,77,314,60,340,40,388,138,302,118,277,148,218,77"
