--- a/wap8b.html
+++ b/wap8b.html
@@ -6,16 +6,16 @@
     <title>Internal</title>
     <style type="text/css">
         body {
-            background-color: lightyellow;
+            background-color: lightblue;
         }
         h1 {
-            color: maroon;
+            color: darkblue;
             text-align: center;
             font-size: 36px;
         }
         p {
-            color: purple;
-            font-size: 20px;
+            color: green;
+            font-size: 36px;
             font-weight: bold;
         }
     </style>
